--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 *.slo
 *.lo
 *.o
-*.obj
+# Mesh files are named obj, so we can not ignore these globally
+# *.obj
 
 # Precompiled Headers
 *.gch
@@ -44,4 +45,3 @@ PROX/FOUNDATION/MESH_ARRAY/unit_tests/mesh_array_tetgen/mesh_array_data_path.h
 PROX/SIMULATION/HYPER/HYPER/include/cl/hyper_cl_kernels_path.h
 PROX/SIMULATION/KDOP/KDOP/include/cl/kdop_cl_kernels_path.h
 PROX/SIMULATION/NARROW/NARROW/include/cl/narrow_cl_kernels_path.h
-
