Modernizing cmake in progress

--- a/PROX/CMakeLists.txt
+++ b/PROX/CMakeLists.txt
@@ -1,4 +1,4 @@
-ADD_SUBDIRECTORY(3RDPARTY)
-ADD_SUBDIRECTORY(FOUNDATION)
-ADD_SUBDIRECTORY(SIMULATION)
-ADD_SUBDIRECTORY(APPLICATIONS)
+add_subdirectory(3RDPARTY)
+add_subdirectory(FOUNDATION)
+add_subdirectory(SIMULATION)
+add_subdirectory(APPLICATIONS)
