--- a/PROX/FOUNDATION/GEOMETRY/GEOMETRY/CMakeLists.txt
+++ b/PROX/FOUNDATION/GEOMETRY/GEOMETRY/CMakeLists.txt
@@ -1,18 +1,9 @@
-INCLUDE_DIRECTORIES( 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/CONVEX/CONVEX/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
-  ${Boost_INCLUDE_DIRS} 
-)
-
-FILE(
-  GLOB
+file(GLOB
   GEOMETRY_SOURCES
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/src/*.cpp
   )
 
-FILE(
-  GLOB
+file(GLOB
   GEOMETRY_HEADERS
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include/*.h
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include/types/*.h
@@ -23,18 +14,27 @@ FILE(
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include/closest_points/*.h
   )
 
-ADD_LIBRARY(
-  geometry
+add_library(geometry
   ${GEOMETRY_SOURCES}
   ${GEOMETRY_HEADERS}
   )
 
-TARGET_LINK_LIBRARIES( geometry )
+target_include_directories(geometry
+  PUBLIC
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include 
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/CONVEX/CONVEX/include 
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
+  ${Boost_INCLUDE_DIRS} 
+  )
 
-SET_TARGET_PROPERTIES(geometry PROPERTIES DEBUG_POSTFIX "D" )
+target_link_libraries(geometry
+  PUBLIC
+  convex
+  tiny
+  )
 
-SET_TARGET_PROPERTIES(geometry PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(geometry PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(geometry PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(geometry PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(geometry PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
+install(
+  TARGETS geometry
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+  )
