--- a/PROX/FOUNDATION/MESH_ARRAY/CMakeLists.txt
+++ b/PROX/FOUNDATION/MESH_ARRAY/CMakeLists.txt
@@ -1,4 +1,4 @@
-ADD_SUBDIRECTORY(MESH_ARRAY)
-IF(PROX_ENABLE_UNIT_TESTS)
-  ADD_SUBDIRECTORY(unit_tests)
-ENDIF()
+add_subdirectory(MESH_ARRAY)
+if(PROX_ENABLE_UNIT_TESTS)
+  add_subdirectory(unit_tests)
+endif()
