--- a/PROX/FOUNDATION/TINY/TINY/CMakeLists.txt
+++ b/PROX/FOUNDATION/TINY/TINY/CMakeLists.txt
@@ -1,30 +1,26 @@
-INCLUDE_DIRECTORIES(
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
-  )
-
-FILE(
-  GLOB
+file(GLOB
   TINY_SOURCES
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/src/*.cpp
   )
 
-FILE(
-  GLOB
+file(GLOB
   TINY_HEADERS
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include/*.h
   )
 
-ADD_LIBRARY(
-  tiny
+add_library(tiny
   ${TINY_SOURCES}
   ${TINY_HEADERS}
   )
 
-SET_TARGET_PROPERTIES(tiny PROPERTIES DEBUG_POSTFIX "D" )
+target_include_directories(tiny
+  PUBLIC
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
+  )
 
-SET_TARGET_PROPERTIES(tiny PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(tiny PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(tiny PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(tiny PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(tiny PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
-
+install(
+  TARGETS tiny
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+ )
+ 
