--- a/PROX/SIMULATION/BROAD/BROAD/CMakeLists.txt
+++ b/PROX/SIMULATION/BROAD/BROAD/CMakeLists.txt
@@ -1,13 +1,9 @@
-INCLUDE_DIRECTORIES( 
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
-  )
-
-FILE(GLOB
+file(GLOB
   BROAD_SOURCES
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/src/*.cpp 
   )
 
-FILE(GLOB
+file(GLOB
   BROAD_HEADERS
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include/*.h 
   )
@@ -18,11 +14,14 @@ ADD_LIBRARY(
   ${BROAD_HEADERS}
   )
 
-SET_TARGET_PROPERTIES(broad PROPERTIES DEBUG_POSTFIX "D" )
+target_include_directories(broad
+  PUBLIC
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
+  )
 
-SET_TARGET_PROPERTIES(broad PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(broad PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(broad PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(broad PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(broad PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
+install(
+  TARGETS broad
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+ )
 
