--- a/PROX/SIMULATION/CMakeLists.txt
+++ b/PROX/SIMULATION/CMakeLists.txt
@@ -1,9 +1,9 @@
-ADD_SUBDIRECTORY(BROAD)
-ADD_SUBDIRECTORY(CONTENT)
-ADD_SUBDIRECTORY(HYPER)
-ADD_SUBDIRECTORY(KDOP)
-ADD_SUBDIRECTORY(MASS)
-ADD_SUBDIRECTORY(NARROW)
-ADD_SUBDIRECTORY(PROCEDURAL)
-ADD_SUBDIRECTORY(PROX)
-ADD_SUBDIRECTORY(SIMULATORS)
+add_subdirectory(BROAD)
+add_subdirectory(CONTENT)
+add_subdirectory(HYPER)
+add_subdirectory(KDOP)
+add_subdirectory(MASS)
+add_subdirectory(NARROW)
+add_subdirectory(PROCEDURAL)
+add_subdirectory(PROX)
+add_subdirectory(SIMULATORS)
