--- a/PROX/SIMULATION/HYPER/HYPER/CMakeLists.txt
+++ b/PROX/SIMULATION/HYPER/HYPER/CMakeLists.txt
@@ -1,39 +1,35 @@
-INCLUDE_DIRECTORIES(
+file(GLOB
+  HYPER_SOURCES
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/HYPER/HYPER/src/*.cpp
+  )
+
+file(GLOB
+  HYPER_HEADERS ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/HYPER/HYPER/include/*.h
+  )
+
+add_library(hyper
+  ${HYPER_SOURCES}
+  ${HYPER_HEADERS}
+  )
+
+target_include_directories(hyper
+  PUBLIC
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include 
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include 
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/HYPER/HYPER/include 
   ${Boost_INCLUDE_DIRS}
-)
-
-FILE(
-  GLOB
-  HYPER_SOURCES
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/HYPER/HYPER/src/*.cpp
   )
 
-FILE(
-  GLOB
-  HYPER_HEADERS ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/HYPER/HYPER/include/*.h
-  )
-
-ADD_LIBRARY(
-  hyper
-  ${HYPER_SOURCES}
-  ${HYPER_HEADERS}
-  )
-
-TARGET_LINK_LIBRARIES(
-  hyper
+target_link_libraries(hyper
+  PUBLIC
   tiny
   sparse
   mesh_array
   )
 
-SET_TARGET_PROPERTIES(hyper PROPERTIES DEBUG_POSTFIX "D" )
-
-SET_TARGET_PROPERTIES(hyper PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(hyper PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(hyper PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(hyper PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(hyper PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
+install(
+  TARGETS hyper
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+ )
