--- a/PROX/FOUNDATION/CMakeLists.txt
+++ b/PROX/FOUNDATION/CMakeLists.txt
@@ -1,8 +1,7 @@
-ADD_SUBDIRECTORY(CONVEX)
-ADD_SUBDIRECTORY(GEOMETRY)
-ADD_SUBDIRECTORY(GL3)
-#ADD_SUBDIRECTORY(GRID)
-ADD_SUBDIRECTORY(MESH_ARRAY)
-ADD_SUBDIRECTORY(SPARSE)
-ADD_SUBDIRECTORY(TINY)
-ADD_SUBDIRECTORY(UTIL)
+add_subdirectory(CONVEX)
+add_subdirectory(GEOMETRY)
+add_subdirectory(GL3)
+add_subdirectory(MESH_ARRAY)
+add_subdirectory(SPARSE)
+add_subdirectory(TINY)
+add_subdirectory(UTIL)
