--- a/PROX/FOUNDATION/CONVEX/CONVEX/CMakeLists.txt
+++ b/PROX/FOUNDATION/CONVEX/CONVEX/CMakeLists.txt
@@ -1,37 +1,34 @@
-INCLUDE_DIRECTORIES( 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/CONVEX/CONVEX/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include
-  ${Boost_INCLUDE_DIRS}
-)
-
-FILE(GLOB
+file(GLOB
   CONVEX_SOURCES
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/CONVEX/CONVEX/src/*.cpp 
   )
-FILE(GLOB 
+
+file(GLOB 
   CONVEX_HEADERS 
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/CONVEX/CONVEX/include/*.h 
   )
 
-ADD_DEFINITIONS("${3RDPARTY_DEF}")
-
-ADD_LIBRARY( 
-  convex 
+add_library(convex 
   ${CONVEX_SOURCES} 
   ${CONVEX_HEADERS} 
   )
 
-TARGET_LINK_LIBRARIES(
-  convex
+target_include_directories(convex
+  PUBLIC
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/CONVEX/CONVEX/include    
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include
+  ${Boost_INCLUDE_DIRS}
+  )
+
+target_link_libraries( convex
+  PUBLIC
   tiny
   geometry
   )
 
-SET_TARGET_PROPERTIES(convex PROPERTIES DEBUG_POSTFIX "D" )
-
-SET_TARGET_PROPERTIES(convex PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(convex PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(convex PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(convex PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(convex PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
+install(
+  TARGETS convex
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+ )
