--- a/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/CMakeLists.txt
+++ b/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/CMakeLists.txt
@@ -1,4 +1,22 @@
-INCLUDE_DIRECTORIES( 
+file(GLOB
+  MESH_ARRAY_SOURCES
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/src/*.cpp
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/src/factory/*.cpp
+  )
+  
+file(GLOB
+  MESH_ARRAY_HEADERS
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include/*.h
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include/factory/*.h
+  )
+
+add_library(mesh_array
+  ${MESH_ARRAY_SOURCES}
+  ${MESH_ARRAY_HEADERS}
+  )
+
+target_include_directories(mesh_array
+  PUBLIC
   ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHULL/QHULL/include
   ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
   ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
@@ -9,28 +27,8 @@ INCLUDE_DIRECTORIES(
   ${Boost_INCLUDE_DIRS}
   )
 
-FILE(
-  GLOB
-  MESH_ARRAY_SOURCES
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/src/*.cpp
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/src/factory/*.cpp
-  )
-  
-FILE(
-  GLOB
-  MESH_ARRAY_HEADERS
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include/*.h
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include/factory/*.h
-  )
-
-ADD_LIBRARY(
-  mesh_array
-  ${MESH_ARRAY_SOURCES}
-  ${MESH_ARRAY_HEADERS}
-  )
-
-TARGET_LINK_LIBRARIES(
-  mesh_array
+target_link_libraries(mesh_array
+  PUBLIC
   ${Boost_SYSTEM_LIBRARY}
   ${Boost_FILESYSTEM_LIBRARY}
   tiny
@@ -40,10 +38,8 @@ TARGET_LINK_LIBRARIES(
   tetgen
 )
 
-SET_TARGET_PROPERTIES(mesh_array PROPERTIES DEBUG_POSTFIX "D" )
-
-SET_TARGET_PROPERTIES(mesh_array PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(mesh_array PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(mesh_array PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(mesh_array PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(mesh_array PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
+install(
+  TARGETS mesh_array
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+ )
