--- a/PROX/FOUNDATION/SPARSE/SPARSE/CMakeLists.txt
+++ b/PROX/FOUNDATION/SPARSE/SPARSE/CMakeLists.txt
@@ -1,27 +1,26 @@
-INCLUDE_DIRECTORIES( 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include
-)
-
-FILE(
-  GLOB
+file(GLOB
   SPARSE_SOURCES
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/src/*.cpp
   )
 
-FILE(
-  GLOB
+file(GLOB
   SPARSE_HEADERS
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include/*.h 
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include/io/*.h 
   )
 
-ADD_LIBRARY( sparse  ${SPARSE_SOURCES}  ${SPARSE_HEADERS})
+add_library( sparse
+  ${SPARSE_SOURCES}
+  ${SPARSE_HEADERS}
+  )
 
-SET_TARGET_PROPERTIES(sparse PROPERTIES DEBUG_POSTFIX "D" )
+target_include_directories(sparse
+  PUBLIC
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include
+  )
 
-SET_TARGET_PROPERTIES(sparse PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(sparse PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(sparse PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(sparse PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(sparse PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
-
+install(
+  TARGETS sparse
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+ )
