--- a/PROX/FOUNDATION/UTIL/UTIL/CMakeLists.txt
+++ b/PROX/FOUNDATION/UTIL/UTIL/CMakeLists.txt
@@ -1,31 +1,25 @@
-INCLUDE_DIRECTORIES( 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include 
-  )
-
-FILE(GLOB
+file(GLOB
   UTIL_SOURCES
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/src/*.cpp 
   )
 
-FILE(GLOB 
+file(GLOB 
   UTIL_HEADERS 
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include/*.h 
   )
 
-ADD_LIBRARY( 
-  util 
+add_library(util 
   ${UTIL_SOURCES} 
   ${UTIL_HEADERS} 
   )
 
-IF(CMAKE_GENERATOR MATCHES Xcode)		
-  SET_TARGET_PROPERTIES(util PROPERTIES XCODE_ATTRIBUTE_WARNING_CFLAGS "-Wall")
-ENDIF(CMAKE_GENERATOR MATCHES Xcode)
+target_include_directories(util
+  PUBLIC
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include 
+  )
 
-SET_TARGET_PROPERTIES(util PROPERTIES DEBUG_POSTFIX "D" )
-
-SET_TARGET_PROPERTIES(util PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(util PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(util PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(util PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(util PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
+install(
+  TARGETS util
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+ )
