--- a/PROX/SIMULATION/CONTENT/CONTENT/CMakeLists.txt
+++ b/PROX/SIMULATION/CONTENT/CONTENT/CMakeLists.txt
@@ -1,43 +1,35 @@
-INCLUDE_DIRECTORIES( 
-  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/CONTENT/CONTENT/include
-)
-
-FILE(GLOB 
+file(GLOB 
   CONTENT_SOURCES 
   src/*.cpp
   )
 
-FILE(GLOB
+file(GLOB
   CONTENT_HEADERS
   include/*.h
   )
 
-ADD_LIBRARY(
-  content
+add_library(content
   ${CONTENT_SOURCES}
   ${CONTENT_HEADERS}
   )
 
-TARGET_LINK_LIBRARIES(
-  content
+target_include_directories(content
+  PUBLIC
+  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/CONTENT/CONTENT/include
+  )
+
+target_link_libraries(content
+  PUBLIC
   tinyxml
   util
   tiny
-)
+  )
 
-IF(APPLE)
-  IF(CMAKE_GENERATOR MATCHES Xcode)		
-    SET_TARGET_PROPERTIES(content PROPERTIES XCODE_ATTRIBUTE_WARNING_CFLAGS "-Wall")
-  ENDIF(CMAKE_GENERATOR MATCHES Xcode)
-ENDIF(APPLE)
-
-SET_TARGET_PROPERTIES(content PROPERTIES DEBUG_POSTFIX "D" )
-
-SET_TARGET_PROPERTIES(content PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(content PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(content PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(content PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(content PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
+install(
+  TARGETS content
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+ )
