Modernizing cmake in progress

--- a/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI/CMakeLists.txt
+++ b/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI/CMakeLists.txt
@@ -8,31 +8,31 @@ SET( RIGID_BODY_GUI_TEXTURES_PATH "${PROJECT_SOURCE_DIR}/bin/resources/textures"
 SET( RIGID_BODY_GUI_OBJS_PATH     "${PROJECT_SOURCE_DIR}/bin/resources/objs"                                 )
 SET( RIGID_BODY_GUI_CFGS_PATH     "${PROJECT_SOURCE_DIR}/bin/rigid_body_gui"                             )
 
-INCLUDE_DIRECTORIES(
-  ${GLM_INCLUDE_DIR}
-  ${GLEW_INCLUDE_DIR}
-  ${Boost_INCLUDE_DIRS}
-  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
-  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
-  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHull/QHull/include
-  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/GLM/glm_0_9_5_4/
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GL3/GL3/include    
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/MASS/MASS/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/NARROW/NARROW/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROX/PROX/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/CONTENT/CONTENT/include 
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROCEDURAL/PROCEDURAL/include 
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/SIMULATORS/SIMULATORS/include
-  ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI_SHARED/include 
-  ${RIGID_BODY_GUI_CODE_PATH}/include  
-)
+#INCLUDE_DIRECTORIES(
+#  ${GLM_INCLUDE_DIR}
+#  ${GLEW_INCLUDE_DIR}
+#  ${Boost_INCLUDE_DIRS}
+#  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
+#  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
+#  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHull/QHull/include
+#  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/GLM/glm_0_9_5_4/
+#  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GL3/GL3/include    
+#  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
+#  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
+#  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include 
+#  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include 
+#  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
+#  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/MASS/MASS/include
+#  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
+#  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/NARROW/NARROW/include
+#  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
+#  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROX/PROX/include
+#  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/CONTENT/CONTENT/include 
+#  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROCEDURAL/PROCEDURAL/include 
+#  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/SIMULATORS/SIMULATORS/include
+#  ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI_SHARED/include 
+#  ${RIGID_BODY_GUI_CODE_PATH}/include  
+#)
 
 FILE(GLOB 
   RIGID_BODY_GUI_SOURCES
@@ -51,18 +51,20 @@ FILE(GLOB
 
 #------------------------------------------------------------------------------
 
-ADD_EXECUTABLE(
+add_executable(
   ${RIGID_BODY_GUI_NAME} 
   ${RIGID_BODY_GUI_SOURCES} 
   ${RIGID_BODY_GUI_HEADERS}
   ${RIGID_BODY_GUI_CFGS}
   )
 
-TARGET_LINK_LIBRARIES(
-  ${RIGID_BODY_GUI_NAME}
-  gl3
-  content
-  simulators
+source_group(Config    FILES ${RIGID_BODY_GUI_CFGS})
+
+target_link_libraries( ${RIGID_BODY_GUI_NAME}
+PRIVATE
+    gl3
+    content
+   simulators
   procedural
   rigid_body_gui_shared
   mass
@@ -83,18 +85,53 @@ TARGET_LINK_LIBRARIES(
   Qt5::Gui
   Qt5::Core
   Qt5::OpenGL
+    OpenGL::GL
+    GLEW::glew
+    glm::glm
   ${Boost_SYSTEM_LIBRARIES} 
-  ${Boost_FILESYSTEM_LIBRARIES} 
-  ${OPENGL_LIBRARIES}
-  ${GLEW_LIBRARIES}
-  )
+  ${Boost_FILESYSTEM_LIBRARIES}
+)
 
-SOURCE_GROUP(Config    FILES ${RIGID_BODY_GUI_CFGS})
+target_include_directories(${RIGID_BODY_GUI_NAME}
+    PRIVATE
+  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
+  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
+  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHull/QHull/include
+#  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/GLM/glm_0_9_5_4/
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GL3/GL3/include    
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include 
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include 
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/MASS/MASS/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/NARROW/NARROW/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROX/PROX/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/CONTENT/CONTENT/include 
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROCEDURAL/PROCEDURAL/include 
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/SIMULATORS/SIMULATORS/include
+  ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI_SHARED/include 
+  ${RIGID_BODY_GUI_CODE_PATH}/include  
+)
 
-SET_TARGET_PROPERTIES(${RIGID_BODY_GUI_NAME} PROPERTIES DEBUG_POSTFIX "D" )
+target_compile_definitions(${RIGID_BODY_GUI_NAME}
+  PRIVATE
+    $<$<CXX_COMPILER_ID:MSVC>:_SCL_SECURE_NO_WARNINGS>
+    $<$<CXX_COMPILER_ID:MSVC>:_SCL_SECURE_NO_DEPRECATE>
+    $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_WARNINGS>
+    $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_DEPRECATE>
+    $<$<CXX_COMPILER_ID:MSVC>:_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS>
+    $<$<CXX_COMPILER_ID:GNU>:_USE_MATH_DEFINES>
+    $<$<CXX_COMPILER_ID:GNU>:GL_SILENCE_DEPRECATION>
+    $<$<CXX_COMPILER_ID:AppleClang>:_USE_MATH_DEFINES>
+    $<$<CXX_COMPILER_ID:AppleClang>:GL_SILENCE_DEPRECATION>
+)
 
-SET_TARGET_PROPERTIES(${RIGID_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${RIGID_BODY_GUI_RUN_PATH}")
-SET_TARGET_PROPERTIES(${RIGID_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${RIGID_BODY_GUI_RUN_PATH}")
-SET_TARGET_PROPERTIES(${RIGID_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${RIGID_BODY_GUI_RUN_PATH}")
-SET_TARGET_PROPERTIES(${RIGID_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${RIGID_BODY_GUI_RUN_PATH}")
-SET_TARGET_PROPERTIES(${RIGID_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${RIGID_BODY_GUI_RUN_PATH}")
+
+install(
+  TARGETS ${RIGID_BODY_GUI_NAME}
+  RUNTIME DESTINATION  ${RIGID_BODY_GUI_RUN_PATH}
+  COMPONENT binary
+ )
