--- a/PROX/SIMULATION/MASS/CMakeLists.txt
+++ b/PROX/SIMULATION/MASS/CMakeLists.txt
@@ -1,4 +1,4 @@
-ADD_SUBDIRECTORY(MASS)
-IF(PROX_ENABLE_UNIT_TESTS)
-  ADD_SUBDIRECTORY(unit_tests)
-ENDIF()
+add_subdirectory(MASS)
+if(PROX_ENABLE_UNIT_TESTS)
+  add_subdirectory(unit_tests)
+endif()
