--- a/PROX/SIMULATION/NARROW/NARROW/CMakeLists.txt
+++ b/PROX/SIMULATION/NARROW/NARROW/CMakeLists.txt
@@ -1,4 +1,20 @@
-INCLUDE_DIRECTORIES(
+file(GLOB 
+  NARROW_SOURCES
+  src/*.cpp
+  )
+
+file(GLOB
+  NARROW_HEADERS
+  include/*.h
+  )
+
+add_library(narrow
+  ${NARROW_SOURCES}  
+  ${NARROW_HEADERS}
+  )
+
+target_include_directories(narrow
+  PUBLIC
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include 
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
@@ -6,36 +22,19 @@ INCLUDE_DIRECTORIES(
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/NARROW/NARROW/include
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
   ${Boost_INCLUDE_DIR}
-)
-
-FILE(GLOB 
-  NARROW_SOURCES
-  src/*.cpp
   )
 
-FILE(GLOB
-  NARROW_HEADERS
-  include/*.h
-  )
-
-ADD_LIBRARY( 
-  narrow
-  ${NARROW_SOURCES}  
-  ${NARROW_HEADERS}
-  )
-
-TARGET_LINK_LIBRARIES(
-  narrow
+target_link_libraries(narrow
+  PUBLIC
   kdop
   tiny
   geometry
   mesh_array
   convex
-)
+  )
 
-SET_TARGET_PROPERTIES(narrow PROPERTIES DEBUG_POSTFIX "D" )
-SET_TARGET_PROPERTIES(narrow PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(narrow PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(narrow PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(narrow PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(narrow PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
+install(
+  TARGETS narrow
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+  )
