--- a/PROX/SIMULATION/PROCEDURAL/PROCEDURAL/CMakeLists.txt
+++ b/PROX/SIMULATION/PROCEDURAL/PROCEDURAL/CMakeLists.txt
@@ -1,4 +1,20 @@
-INCLUDE_DIRECTORIES( 
+file(GLOB 
+  PROCEDURAL_SOURCES
+  src/*.cpp
+  )
+
+file(GLOB
+  PROCEDURAL_HEADERS
+  include/*.h
+  )
+
+add_library(procedural 
+  ${PROCEDURAL_SOURCES}  
+  ${PROCEDURAL_HEADERS}
+)
+
+target_include_directories(procedural
+  PUBLIC
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include  
@@ -7,37 +23,19 @@ INCLUDE_DIRECTORIES(
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/CONTENT/CONTENT/include
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROCEDURAL/PROCEDURAL/include
   ${Boost_INCLUDE_DIR}
-)
-
-FILE(GLOB 
-  PROCEDURAL_SOURCES
-  src/*.cpp
   )
 
-FILE(GLOB
-  PROCEDURAL_HEADERS
-  include/*.h
-  )
-
-ADD_LIBRARY( 
-  procedural 
-  ${PROCEDURAL_SOURCES}  
-  ${PROCEDURAL_HEADERS}
-)
-
-TARGET_LINK_LIBRARIES(
-  procedural
+target_link_libraries(procedural
+  PUBLIC
   util
   mass
   tiny
   mesh_array
   content
-)
+  )
 
-SET_TARGET_PROPERTIES(procedural PROPERTIES DEBUG_POSTFIX "D" )
-
-SET_TARGET_PROPERTIES(procedural PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(procedural PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(procedural PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(procedural PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(procedural PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
+install(
+  TARGETS procedural
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+  )
