--- a/PROX/SIMULATION/PROX/PROX/CMakeLists.txt
+++ b/PROX/SIMULATION/PROX/PROX/CMakeLists.txt
@@ -1,22 +1,9 @@
-INCLUDE_DIRECTORIES(
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/CONVEX/CONVEX/include 
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/NARROW/NARROW/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include 
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROX/PROX/include 
-  ${Boost_INCLUDE_DIRS}
-)
-
-FILE(GLOB 
+file(GLOB 
   PROX_SOURCES 
   src/*.cpp
   )
 
-FILE(GLOB
+file(GLOB
   PROX_HEADERS
   include/*.h
   include/steppers/*.h
@@ -31,8 +18,22 @@ ADD_LIBRARY(
   ${PROX_HEADERS}
 )
 
-TARGET_LINK_LIBRARIES(
-  prox
+target_include_directories(kdop
+  PUBLIC
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include 
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include 
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/CONVEX/CONVEX/include 
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/NARROW/NARROW/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include 
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROX/PROX/include 
+  ${Boost_INCLUDE_DIRS}
+  )
+
+target_link_libraries(prox
+  PUBLIC
   tiny
   sparse
   geometry
@@ -41,35 +42,29 @@ TARGET_LINK_LIBRARIES(
   broad
   narrow
   kdop
-)
+  )
 
-SET_TARGET_PROPERTIES(prox PROPERTIES DEBUG_POSTFIX "D" )
+install(
+  TARGETS prox
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+  )
 
-SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
 
 # Add folders to filters
 
-FILE(GLOB
-  PROX_NARROW
-  include/narrow/*.h
-  )
-
-FILE(GLOB
+file(GLOB
   PROX_SOLVERS
   include/solvers/*.h
   include/solvers/sub/*.h
   include/solvers/strategies/*.h
   )
 
-FILE(GLOB
+source_group(solvers   FILES ${PROX_SOLVERS})
+
+file(GLOB
   PROX_STEPPERS
   include/steppers/*.h
   )
 
-SOURCE_GROUP(narrow    FILES ${PROX_NARROW})
-SOURCE_GROUP(steppers  FILES ${PROX_STEPPERS})
-SOURCE_GROUP(solvers   FILES ${PROX_SOLVERS})
+source_group(steppers  FILES ${PROX_STEPPERS})
