--- a/PROX/SIMULATION/SIMULATORS/SIMULATORS/CMakeLists.txt
+++ b/PROX/SIMULATION/SIMULATORS/SIMULATORS/CMakeLists.txt
@@ -1,4 +1,22 @@
-INCLUDE_DIRECTORIES(
+file(GLOB 
+  SIMULATORS_SOURCES
+  src/*.cpp
+  )
+
+file(GLOB
+  SIMULATORS_HEADERS
+  include/*.h
+  private/*.h
+  )
+
+add_library(simulators 
+  ${SIMULATORS_SOURCES}  
+  ${SIMULATORS_HEADERS}
+  )
+
+
+target_include_directories(simulators
+  PUBLIC
   ${Boost_INCLUDE_DIRS}
   ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
   ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
@@ -17,27 +35,10 @@ INCLUDE_DIRECTORIES(
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROX/PROX/include
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/SIMULATORS/SIMULATORS/include
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/SIMULATORS/SIMULATORS/private
-)
-
-FILE(GLOB 
-  SIMULATORS_SOURCES
-  src/*.cpp
   )
 
-FILE(GLOB
-  SIMULATORS_HEADERS
-  include/*.h
-  private/*.h
-  )
-
-ADD_LIBRARY( 
-  simulators 
-  ${SIMULATORS_SOURCES}  
-  ${SIMULATORS_HEADERS}
-)
-
-TARGET_LINK_LIBRARIES(
-  simulators
+target_link_libraries(simulators
+  PUBLIC
   content
   tiny
   sparse
@@ -53,11 +54,10 @@ TARGET_LINK_LIBRARIES(
   tetgen
   tinyxml
   qhull
-)
+  )
 
-SET_TARGET_PROPERTIES(simulators PROPERTIES DEBUG_POSTFIX "D" )
-SET_TARGET_PROPERTIES(simulators PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(simulators PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(simulators PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(simulators PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(simulators PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
+install(
+  TARGETS simulators
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+  )
