Modernizing cmake in progress

--- a/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_CMD/CMakeLists.txt
+++ b/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_CMD/CMakeLists.txt
@@ -1,4 +1,31 @@
 INCLUDE_DIRECTORIES( 
+)
+
+FILE(GLOB 
+  RIGID_BODY_CMD_SOURCES
+  src/*.cpp 
+  )
+
+FILE(GLOB
+  RIGID_BODY_CMD_HEADERS
+  include/*.h 
+  )
+
+FILE(GLOB
+  RIGID_BODY_CMD_CFGS
+  ${PROJECT_SOURCE_DIR}/bin/rigid_body_cmd/*.cfg
+  )
+
+add_executable(rigid_body_cmd 
+  ${RIGID_BODY_CMD_SOURCES} 
+  ${RIGID_BODY_CMD_HEADERS}
+  ${RIGID_BODY_CMD_CFGS}
+  )
+
+source_group(Config    FILES ${RIGID_BODY_CMD_CFGS})
+
+target_include_directories(rigid_body_cmd
+  PRIVATE
   ${Boost_INCLUDE_DIRS}
   ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
   ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
@@ -18,32 +45,23 @@ INCLUDE_DIRECTORIES(
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/SIMULATORS/SIMULATORS/include 
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROCEDURAL/PROCEDURAL/include 
   ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_CMD/include 
+  )
+
+target_compile_definitions(rigid_body_cmd
+  PRIVATE
+    $<$<CXX_COMPILER_ID:MSVC>:_SCL_SECURE_NO_WARNINGS>
+    $<$<CXX_COMPILER_ID:MSVC>:_SCL_SECURE_NO_DEPRECATE>
+    $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_WARNINGS>
+    $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_DEPRECATE>
+    $<$<CXX_COMPILER_ID:MSVC>:_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS>
+    $<$<CXX_COMPILER_ID:GNU>:_USE_MATH_DEFINES>
+    $<$<CXX_COMPILER_ID:GNU>:GL_SILENCE_DEPRECATION>
+    $<$<CXX_COMPILER_ID:AppleClang>:_USE_MATH_DEFINES>
+    $<$<CXX_COMPILER_ID:AppleClang>:GL_SILENCE_DEPRECATION>
 )
 
-FILE(GLOB 
-  RIGID_BODY_CMD_SOURCES
-  src/*.cpp 
-  )
-
-FILE(GLOB
-  RIGID_BODY_CMD_HEADERS
-  include/*.h 
-  )
-
-FILE(GLOB
-  RIGID_BODY_CMD_CFGS
-  ${PROJECT_SOURCE_DIR}/bin/rigid_body_cmd/*.cfg
-  )
-
-ADD_EXECUTABLE(
-  rigid_body_cmd 
-  ${RIGID_BODY_CMD_SOURCES} 
-  ${RIGID_BODY_CMD_HEADERS}
-  ${RIGID_BODY_CMD_CFGS}
-  )
-
-TARGET_LINK_LIBRARIES(
-  rigid_body_cmd
+target_link_libraries(rigid_body_cmd
+  PRIVATE
   simulators
   procedural
   content
@@ -65,11 +83,8 @@ TARGET_LINK_LIBRARIES(
   ${Boost_FILESYSTEM_LIBRARIES} 
   )
 
-SOURCE_GROUP(Config    FILES ${RIGID_BODY_CMD_CFGS})
-
-SET_TARGET_PROPERTIES(rigid_body_cmd PROPERTIES DEBUG_POSTFIX "D" )
-SET_TARGET_PROPERTIES(rigid_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin/rigid_body_cmd")
-SET_TARGET_PROPERTIES(rigid_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin/rigid_body_cmd")
-SET_TARGET_PROPERTIES(rigid_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin/rigid_body_cmd")
-SET_TARGET_PROPERTIES(rigid_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin/rigid_body_cmd")
-SET_TARGET_PROPERTIES(rigid_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin/rigid_body_cmd")
+install(
+  TARGETS rigid_body_cmd
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/bin/}
+  COMPONENT binary
+  )
