--- a/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_CMD/CMakeLists.txt
+++ b/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_CMD/CMakeLists.txt
@@ -1,4 +1,28 @@
-INCLUDE_DIRECTORIES( 
+file(GLOB 
+  SOFT_BODY_CMD_SOURCES
+  src/*.cpp 
+  )
+
+file(GLOB
+  SOFT_BODY_CMD_HEADERS
+  include/*.h 
+  )
+  
+file(GLOB
+  SOFT_BODY_CMD_CFGS
+  ${PROJECT_SOURCE_DIR}/bin/soft_body_cmd/*.cfg
+  )
+
+add_executable(soft_body_cmd
+  ${SOFT_BODY_CMD_SOURCES} 
+  ${SOFT_BODY_CMD_HEADERS}
+  ${SOFT_BODY_CMD_CFGS}
+  )
+
+source_group(Config    FILES ${SOFT_BODY_CMD_CFGS})
+
+target_include_directories(soft_body_cmd
+  PRIVATE
   ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_SHARED/include 
   ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_CMD/include 
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include 
@@ -11,30 +35,8 @@ INCLUDE_DIRECTORIES(
   ${Boost_INCLUDE_DIRS}
   )
 
-FILE(GLOB 
-  SOFT_BODY_CMD_SOURCES
-  src/*.cpp 
-  )
-
-FILE(GLOB
-  SOFT_BODY_CMD_HEADERS
-  include/*.h 
-  )
-
-FILE(GLOB
-  SOFT_BODY_CMD_CFGS
-  ${PROJECT_SOURCE_DIR}/bin/soft_body_cmd/*.cfg
-  )
-
-ADD_EXECUTABLE(
-  soft_body_cmd
-  ${SOFT_BODY_CMD_SOURCES} 
-  ${SOFT_BODY_CMD_HEADERS}
-  ${SOFT_BODY_CMD_CFGS}
-  )
-
-TARGET_LINK_LIBRARIES(
-  soft_body_cmd
+target_link_libraries(soft_body_cmd
+  PRIVATE
   soft_body_shared
   kdop
   hyper
@@ -49,12 +51,22 @@ TARGET_LINK_LIBRARIES(
   ${Boost_FILESYSTEM_LIBRARIES}
   )
 
-SOURCE_GROUP(Config    FILES ${SOFT_BODY_CMD_CFGS})
+target_compile_definitions(soft_body_cmd
+  PRIVATE
+    $<$<CXX_COMPILER_ID:MSVC>:_SCL_SECURE_NO_WARNINGS>
+    $<$<CXX_COMPILER_ID:MSVC>:_SCL_SECURE_NO_DEPRECATE>
+    $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_WARNINGS>
+    $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_DEPRECATE>
+    $<$<CXX_COMPILER_ID:MSVC>:_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS>
+    $<$<CXX_COMPILER_ID:GNU>:_USE_MATH_DEFINES>
+    $<$<CXX_COMPILER_ID:GNU>:GL_SILENCE_DEPRECATION>
+    $<$<CXX_COMPILER_ID:AppleClang>:_USE_MATH_DEFINES>
+    $<$<CXX_COMPILER_ID:AppleClang>:GL_SILENCE_DEPRECATION>
+)
 
-SET_TARGET_PROPERTIES(soft_body_cmd PROPERTIES DEBUG_POSTFIX "D" )
+install(
+  TARGETS soft_body_cmd
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/bin/}
+  COMPONENT binary
+  )
 
-SET_TARGET_PROPERTIES(soft_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin/soft_body_cmd")
-SET_TARGET_PROPERTIES(soft_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin/soft_body_cmd")
-SET_TARGET_PROPERTIES(soft_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin/soft_body_cmd")
-SET_TARGET_PROPERTIES(soft_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin/soft_body_cmd")
-SET_TARGET_PROPERTIES(soft_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin/soft_body_cmd")
