--- a/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_SHARED/CMakeLists.txt
+++ b/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_SHARED/CMakeLists.txt
@@ -1,4 +1,20 @@
-INCLUDE_DIRECTORIES(
+file(GLOB 
+  SOFT_BODY_SHARED_SOURCES
+  src/*.cpp 
+  )
+
+file(GLOB
+  SOFT_BODY_SHARED_HEADERS
+  include/*.h 
+  )
+
+add_library(soft_body_shared 
+  ${SOFT_BODY_SHARED_SOURCES} 
+  ${SOFT_BODY_SHARED_HEADERS}
+  )
+
+target_include_directories(soft_body_shared
+  PUBLIC
   ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
   ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHull/QHull/include
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
@@ -9,26 +25,10 @@ INCLUDE_DIRECTORIES(
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
   ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_SHARED/include
   ${Boost_INCLUDE_DIRS}
-)
-
-FILE(GLOB 
-  SOFT_BODY_SHARED_SOURCES
-  src/*.cpp 
   )
 
-FILE(GLOB
-  SOFT_BODY_SHARED_HEADERS
-  include/*.h 
-  )
-
-ADD_LIBRARY(
-  soft_body_shared 
-  ${SOFT_BODY_SHARED_SOURCES} 
-  ${SOFT_BODY_SHARED_HEADERS}
-  )
-
-TARGET_LINK_LIBRARIES(
-  soft_body_shared
+target_link_libraries(soft_body_shared
+  PUBLIC
   tiny
   sparse
   geometry
@@ -41,10 +41,21 @@ TARGET_LINK_LIBRARIES(
   ${Boost_FILESYSTEM_LIBRARIES} 
   )
 
-SET_TARGET_PROPERTIES(soft_body_shared PROPERTIES DEBUG_POSTFIX "D" )
+target_compile_definitions(soft_body_shared
+  PUBLIC
+    $<$<CXX_COMPILER_ID:MSVC>:_SCL_SECURE_NO_WARNINGS>
+    $<$<CXX_COMPILER_ID:MSVC>:_SCL_SECURE_NO_DEPRECATE>
+    $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_WARNINGS>
+    $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_DEPRECATE>
+    $<$<CXX_COMPILER_ID:MSVC>:_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS>
+    $<$<CXX_COMPILER_ID:GNU>:_USE_MATH_DEFINES>
+    $<$<CXX_COMPILER_ID:GNU>:GL_SILENCE_DEPRECATION>
+    $<$<CXX_COMPILER_ID:AppleClang>:_USE_MATH_DEFINES>
+    $<$<CXX_COMPILER_ID:AppleClang>:GL_SILENCE_DEPRECATION>
+)
 
-SET_TARGET_PROPERTIES(soft_body_shared PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib")
-SET_TARGET_PROPERTIES(soft_body_shared PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib")
-SET_TARGET_PROPERTIES(soft_body_shared PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib")
-SET_TARGET_PROPERTIES(soft_body_shared PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib")
-SET_TARGET_PROPERTIES(soft_body_shared PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib")
+install(
+  TARGETS soft_body_shared
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/bin/}
+  COMPONENT binary
+  )
