--- a/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI_SHARED/CMakeLists.txt
+++ b/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI_SHARED/CMakeLists.txt
@@ -1,84 +1,97 @@
-INCLUDE_DIRECTORIES(
-  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
-  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
-  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHull/QHull/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GLM/glm_0_9_5_4/
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GL3/GL3/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/CONVEX/CONVEX/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/MASS/MASS/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/NARROW/NARROW/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROX/PROX/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/CONTENT/CONTENT/include 
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/SIMULATORS/SIMULATORS/include 
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROCEDURAL/PROCEDURAL/include 
-  ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI_SHARED/include
-  ${OPENGL_INCLUDE_DIR}
-  ${GLEW_INCLUDE_DIR}
-  ${Boost_INCLUDE_DIRS}
-)
-
-FILE(GLOB 
+file(GLOB 
   RIGID_BODY_GUI_SHARED_SOURCES
   src/*.cpp 
   )
 
-FILE(GLOB
+file(GLOB
   RIGID_BODY_GUI_SHARED_HEADERS
   include/*.h 
   )
 
-FILE(GLOB
+file(GLOB
   RIGID_BODY_GUI_SHARED_SHADERS
   shaders/*.glsl
   shaders/ssao/*.glsl
   shaders/show_texture/*.glsl
   )
 
-ADD_LIBRARY(
-  rigid_body_gui_shared 
+add_library(rigid_body_gui_shared 
   ${RIGID_BODY_GUI_SHARED_SOURCES} 
   ${RIGID_BODY_GUI_SHARED_HEADERS}
   ${RIGID_BODY_GUI_SHARED_SHADERS}
   )
 
-TARGET_LINK_LIBRARIES(
-  rigid_body_gui_shared
+source_group(Shaders FILES ${RIGID_BODY_GUI_SHARED_SHADERS} )
+  
+target_link_libraries(rigid_body_gui_shared
+  PUBLIC
+  gl3
+  content
   simulators
   procedural
-  content
-  gl3
+  mass
+  broad
+  narrow
+  kdop
+  prox
   tiny
   sparse
   convex
   geometry
   mesh_array
-  kdop
-  narrow
-  broad
-  prox
-  mass
   util
   tetgen
   tinyxml
   qhull
+  Qt5::Widgets
+  Qt5::Gui
+  Qt5::Core
+  Qt5::OpenGL
+  OpenGL::GL
+  GLEW::glew
+  glm::glm
   ${Boost_SYSTEM_LIBRARIES} 
-  ${Boost_FILESYSTEM_LIBRARIES} 
-  ${OPENGL_LIBRARIES}
-  ${GLEW_LIBRARIES}
-  )
+  ${Boost_FILESYSTEM_LIBRARIES}
+)
 
-SOURCE_GROUP(Shaders FILES ${RIGID_BODY_GUI_SHARED_SHADERS} )
+target_include_directories(rigid_body_gui_shared
+  PUBLIC
+  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
+  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
+  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHull/QHull/include
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GL3/GL3/include    
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include 
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include 
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/MASS/MASS/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/NARROW/NARROW/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROX/PROX/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/CONTENT/CONTENT/include 
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROCEDURAL/PROCEDURAL/include 
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/SIMULATORS/SIMULATORS/include
+  ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI_SHARED/include
+  ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI/include  
+)
 
-SET_TARGET_PROPERTIES(rigid_body_gui_shared PROPERTIES DEBUG_POSTFIX "D" )
-SET_TARGET_PROPERTIES(rigid_body_gui_shared PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib")
-SET_TARGET_PROPERTIES(rigid_body_gui_shared PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib")
-SET_TARGET_PROPERTIES(rigid_body_gui_shared PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib")
-SET_TARGET_PROPERTIES(rigid_body_gui_shared PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib")
-SET_TARGET_PROPERTIES(rigid_body_gui_shared PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib")
+target_compile_definitions(rigid_body_gui_shared
+  PUBLIC
+    $<$<CXX_COMPILER_ID:MSVC>:_SCL_SECURE_NO_WARNINGS>
+    $<$<CXX_COMPILER_ID:MSVC>:_SCL_SECURE_NO_DEPRECATE>
+    $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_WARNINGS>
+    $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_DEPRECATE>
+    $<$<CXX_COMPILER_ID:MSVC>:_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS>
+    $<$<CXX_COMPILER_ID:GNU>:_USE_MATH_DEFINES>
+    $<$<CXX_COMPILER_ID:GNU>:GL_SILENCE_DEPRECATION>
+    $<$<CXX_COMPILER_ID:AppleClang>:_USE_MATH_DEFINES>
+    $<$<CXX_COMPILER_ID:AppleClang>:GL_SILENCE_DEPRECATION>
+)
+
+install(
+  TARGETS rigid_body_gui_shared
+  RUNTIME DESTINATION  ${RIGID_BODY_GUI_RUN_PATH}
+  COMPONENT binary
+ )
