--- a/PROX/APPLICATIONS/SOFT_BODY/CMakeLists.txt
+++ b/PROX/APPLICATIONS/SOFT_BODY/CMakeLists.txt
@@ -1,3 +1,3 @@
-ADD_SUBDIRECTORY(SOFT_BODY_SHARED)
-ADD_SUBDIRECTORY(SOFT_BODY_CMD)
-ADD_SUBDIRECTORY(SOFT_BODY_GUI)
+add_subdirectory(SOFT_BODY_SHARED)
+add_subdirectory(SOFT_BODY_CMD)
+add_subdirectory(SOFT_BODY_GUI)
