--- a/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_GUI/CMakeLists.txt
+++ b/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_GUI/CMakeLists.txt
@@ -1,22 +1,51 @@
-SET( CMAKE_INCLUDE_CURRENT_DIR ON                                     )
-SET( CMAKE_AUTOMOC ON                                                 )
+set( CMAKE_INCLUDE_CURRENT_DIR ON                                     )
+set( CMAKE_AUTOMOC ON                                                 )
 
-SET( SOFT_BODY_GUI_CODE_PATH     "${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_GUI"          )
-SET( SOFT_BODY_GUI_NAME          "soft_body_gui"                                                       )
-SET( SOFT_BODY_GUI_RUN_PATH      "${PROJECT_SOURCE_DIR}/bin/soft_body_gui"                             )
-SET( SOFT_BODY_GUI_SHADERS_PATH  "${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_GUI/shaders"  )
-SET( SOFT_BODY_GUI_TEXTURES_PATH "${PROJECT_SOURCE_DIR}/bin/resources/textures"                            )
-SET( SOFT_BODY_GUI_OBJS_PATH     "${PROJECT_SOURCE_DIR}/bin/resources/objs"                                )
-SET( SOFT_BODY_GUI_CFGS_PATH     "${PROJECT_SOURCE_DIR}/bin/soft_body_gui"                             )
+set( SOFT_BODY_GUI_CODE_PATH     "${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_GUI"          )
+set( SOFT_BODY_GUI_NAME          "soft_body_gui"                                                       )
+set( SOFT_BODY_GUI_RUN_PATH      "${PROJECT_SOURCE_DIR}/bin/soft_body_gui"                             )
+set( SOFT_BODY_GUI_SHADERS_PATH  "${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_GUI/shaders"  )
+set( SOFT_BODY_GUI_TEXTURES_PATH "${PROJECT_SOURCE_DIR}/bin/resources/textures"                            )
+set( SOFT_BODY_GUI_OBJS_PATH     "${PROJECT_SOURCE_DIR}/bin/resources/objs"                                )
+set( SOFT_BODY_GUI_CFGS_PATH     "${PROJECT_SOURCE_DIR}/bin/soft_body_gui"                             )
 
-INCLUDE_DIRECTORIES(
-  ${GLM_INCLUDE_DIR}
-  ${GLEW_INCLUDE_DIR}
+file(GLOB 
+  SOFT_BODY_GUI_SOURCES
+  ${SOFT_BODY_GUI_CODE_PATH}/src/*.cpp 
+  )
+
+file(GLOB
+  SOFT_BODY_GUI_HEADERS
+  ${SOFT_BODY_GUI_CODE_PATH}/include/*.h 
+  )
+
+file(GLOB
+  SOFT_BODY_GUI_SHADERS
+  ${SOFT_BODY_GUI_SHADERS_PATH}/*.glsl
+  )
+
+file(GLOB
+  SOFT_BODY_GUI_CFGS
+  ${SOFT_BODY_GUI_CFGS_PATH}/*.cfg
+  )
+
+add_executable(${SOFT_BODY_GUI_NAME} 
+  ${SOFT_BODY_GUI_SOURCES} 
+  ${SOFT_BODY_GUI_HEADERS}
+  ${SOFT_BODY_GUI_SHADERS}
+  ${SOFT_BODY_GUI_CFGS}
+  )
+  
+source_group(Shaders FILES ${SOFT_BODY_GUI_SHADERS} )
+
+source_group(Config  FILES ${SOFT_BODY_GUI_CFGS}    )
+
+target_include_directories(${SOFT_BODY_GUI_NAME}
+  PRIVATE
   ${Boost_INCLUDE_DIRS}
   ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
   ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
   ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHull/QHull/include
-  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/GLM/glm_0_9_5_4/
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GL3/GL3/include    
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
   ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
@@ -27,38 +56,10 @@ INCLUDE_DIRECTORIES(
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/HYPER/HYPER/include    
   ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/SOFT_BODY/SOFT_BODY_SHARED/include 
   ${SOFT_BODY_GUI_CODE_PATH}/include
-)
-
-FILE(GLOB 
-  SOFT_BODY_GUI_SOURCES
-  ${SOFT_BODY_GUI_CODE_PATH}/src/*.cpp 
   )
 
-FILE(GLOB
-  SOFT_BODY_GUI_HEADERS
-  ${SOFT_BODY_GUI_CODE_PATH}/include/*.h 
-  )
-
-FILE(GLOB
-  SOFT_BODY_GUI_SHADERS
-  ${SOFT_BODY_GUI_SHADERS_PATH}/*.glsl
-  )
-
-FILE(GLOB
-  SOFT_BODY_GUI_CFGS
-  ${SOFT_BODY_GUI_CFGS_PATH}/*.cfg
-  )
-
-ADD_EXECUTABLE(
-  ${SOFT_BODY_GUI_NAME} 
-  ${SOFT_BODY_GUI_SOURCES} 
-  ${SOFT_BODY_GUI_HEADERS}
-  ${SOFT_BODY_GUI_SHADERS}
-  ${SOFT_BODY_GUI_CFGS}
-  )
-
-TARGET_LINK_LIBRARIES(
-  ${SOFT_BODY_GUI_NAME}
+target_link_libraries(${SOFT_BODY_GUI_NAME}
+  PRIVATE
   soft_body_shared
   gl3
   kdop
@@ -74,19 +75,28 @@ TARGET_LINK_LIBRARIES(
   Qt5::Gui
   Qt5::Core
   Qt5::OpenGL
-  ${OPENGL_LIBRARIES}
-  ${GLEW_LIBRARIES}
+  OpenGL::GL
+  GLEW::glew
+  glm::glm
   ${Boost_SYSTEM_LIBRARIES} 
   ${Boost_FILESYSTEM_LIBRARIES} 
   )
 
-SOURCE_GROUP(Shaders FILES ${SOFT_BODY_GUI_SHADERS} )
-SOURCE_GROUP(Config  FILES ${SOFT_BODY_GUI_CFGS}    )
+target_compile_definitions(${SOFT_BODY_GUI_NAME}
+  PRIVATE
+    $<$<CXX_COMPILER_ID:MSVC>:_SCL_SECURE_NO_WARNINGS>
+    $<$<CXX_COMPILER_ID:MSVC>:_SCL_SECURE_NO_DEPRECATE>
+    $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_WARNINGS>
+    $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_DEPRECATE>
+    $<$<CXX_COMPILER_ID:MSVC>:_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS>
+    $<$<CXX_COMPILER_ID:GNU>:_USE_MATH_DEFINES>
+    $<$<CXX_COMPILER_ID:GNU>:GL_SILENCE_DEPRECATION>
+    $<$<CXX_COMPILER_ID:AppleClang>:_USE_MATH_DEFINES>
+    $<$<CXX_COMPILER_ID:AppleClang>:GL_SILENCE_DEPRECATION>
+)
 
-SET_TARGET_PROPERTIES(${SOFT_BODY_GUI_NAME} PROPERTIES DEBUG_POSTFIX "D" )
-
-SET_TARGET_PROPERTIES(${SOFT_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${SOFT_BODY_GUI_RUN_PATH}")
-SET_TARGET_PROPERTIES(${SOFT_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${SOFT_BODY_GUI_RUN_PATH}")
-SET_TARGET_PROPERTIES(${SOFT_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${SOFT_BODY_GUI_RUN_PATH}")
-SET_TARGET_PROPERTIES(${SOFT_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${SOFT_BODY_GUI_RUN_PATH}")
-SET_TARGET_PROPERTIES(${SOFT_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${SOFT_BODY_GUI_RUN_PATH}")
+install(
+  TARGETS ${SOFT_BODY_GUI_NAME}
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/bin/}
+  COMPONENT binary
+  )
