--- a/PROX/SIMULATION/SIMULATORS/SIMULATORS/CMakeLists.txt
+++ b/PROX/SIMULATION/SIMULATORS/SIMULATORS/CMakeLists.txt
@@ -17,19 +17,8 @@ add_library(simulators
 
 target_include_directories(simulators
   PUBLIC
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/CONVEX/CONVEX/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include  
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/CONTENT/CONTENT/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/MASS/MASS/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/NARROW/NARROW/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROX/PROX/include
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/SIMULATORS/SIMULATORS/include
+  PRIVATE
   ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/SIMULATORS/SIMULATORS/private
   )
 
